--- a/includes/themes/default/templates/login.html
+++ b/includes/themes/default/templates/login.html
@@ -1,45 +1,58 @@
 <!-- login_content -->
 <div class="container-fluid">
     <div class="row no-gutter">
-        <!-- The image half -->
+        <!-- Bildhälfte -->
         <div class="col-md-6 d-none d-md-flex bg-image row signup-greeting overlay">
             <h4 class="reg_pic_text">{{ info1 }}</h4>
             <p class="reg_pic_text">{{ info2 }}</p>
         </div>
-        <!-- The content half -->
+        <!-- Loginbereich -->
         <div class="col-md-6">
             <div class="login d-flex align-items-center py-5">
-                <!-- Demo content-->
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-10 col-xl-7 mx-auto">
                             <h3 class="display-6">{{ login_titel }}</h3>
                             <p class="float-end mb-4">{{ need_account }}
-                            <a href="index.php?site=register">{{ reg }}</a></p>
-                            <form method="post" name="login" action="/includes/modules/checklogin.php" role="form" class="form-horizontal needs-validation" novalidate>
+                                <a href="index.php?site=register">{{ reg }}</a>
+                            </p>
+
+                            <form method="post" name="login" action="/includes/modules/admincheck.php" role="form" class="form-horizontal needs-validation" novalidate>
                                 <div class="form-group mb-3">
+                                    <label for="emailAddress">{{ enter_your_email }}</label>
                                     <input name="ws_user" type="email" class="form-control" id="emailAddress" placeholder="{{ enter_your_email }}" required>
                                 </div>
+
                                 <div class="form-group mb-3">
+                                    <label for="loginPassword">{{ enter_password }}</label>
                                     <input name="password" type="password" class="form-control" id="loginPassword" placeholder="{{ enter_password }}" required>
                                 </div>
-                                <br><br>
-                                <div class="text-end" style="margin-top: -50px;"><a href="index.php?site=lostpassword">{{ lost_password }}</a></div>
-                                <button type="submit" name="submit" class="text-uppercase btn btn-primary">{{ login }}</button>
-                                <div class="text-center d-flex justify-content-between mt-4"><br>    
-                                    <p>{{ forgotten_your_login }}
-                                    <br><br>
-                                    {{ info_login }}</p>  
+
+                                <div class="text-end mb-3">
+                                    <a href="index.php?site=lostpassword">{{ lost_password }}</a>
+                                </div>
+
+                                <button type="submit" name="submit" class="btn btn-lg btn-primary btn-block text-uppercase font-weight-bold mb-2">
+                                    {{ login }}
+                                </button>
+
+                                <div class="text-center d-flex justify-content-between mt-4">
+                                    <p>
+                                        {{ forgotten_your_login }}<br><br>
+                                        {{ info_login }}
+                                    </p>
                                 </div>
                             </form>
+
                         </div>
                     </div>
-                </div><!-- End -->
+                </div>
             </div>
-        </div><!-- End -->
+        </div>
     </div>
 </div>
 <!-- END -->
+
 <!-- login_cookie_error-->
     <div class="container">
         <div class="alert alert-danger text-center" role="alert">
