new RM Installer

--- a/includes/themes/default/templates/privacy_policy.html
+++ b/includes/themes/default/templates/privacy_policy.html
@@ -11,7 +11,7 @@
 <!-- privacy_policy_content -->
 <div class="card">
     <div class="card-body">
-        {{ privacy_policy_text }}<br>{{ stand1 }}<b><u>{{ myclanname }}</u></b>{{ stand2 }}{{ date }}
+        {{ privacy_policy_text }}<br>{{ stand1 }}<b><u>{{ page_title }}</u></b>{{ stand2 }}{{ date }}
     </div>
 </div>
 <!-- END -->
