--- a/includes/themes/default/templates/login.html
+++ b/includes/themes/default/templates/login.html
@@ -1,66 +1,55 @@
 <!-- login_content -->
-<div class="container-fluid">
-    <div class="row no-gutter">
-        <!-- Bildhälfte -->
-        <div class="col-md-6 d-none d-md-flex bg-image row signup-greeting overlay">
-            <h4 class="reg_pic_text">{{ info1 }}</h4>
-            <p class="reg_pic_text">{{ info2 }}</p>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card shadow-lg p-4">
+        <h2 class="text-center mb-4">{{ login_headline }}</h2>
+
+        {{ error_message }}
+
+        <form method="post" action="">
+          <div class="mb-3">
+            <label for="email" class="form-label">{{ username_label }}</label>
+            <input type="email" class="form-control" id="email" name="email" required>
         </div>
-        <!-- Loginbereich -->
-        <div class="col-md-6">
-            <div class="login d-flex align-items-center py-5">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-10 col-xl-7 mx-auto">
-                            <h3 class="display-6">{{ login_titel }}</h3>
-                            <p class="float-end mb-4">{{ need_account }}
-                                <a href="index.php?site=register">{{ reg }}</a>
-                            </p>
 
-                            <form method="post" name="login" action="/includes/modules/admincheck.php" role="form" class="form-horizontal needs-validation" novalidate>
-                                <div class="form-group mb-3">
-                                    <label for="emailAddress">{{ enter_your_email }}</label>
-                                    <input name="ws_user" type="email" class="form-control" id="emailAddress" placeholder="{{ enter_your_email }}" required>
-                                </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">{{ password_label }}</label>
+            <input type="password" class="form-control" id="password" name="password" required>
+          </div>
 
-                                <div class="form-group mb-3">
-                                    <label for="loginPassword">{{ enter_password }}</label>
-                                    <input name="password" type="password" class="form-control" id="loginPassword" placeholder="{{ enter_password }}" required>
-                                </div>
+          <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="remember" name="remember">
+            <label class="form-check-label" for="remember">{{ remember_me }}</label>
+          </div>
 
-                                <div class="text-end mb-3">
-                                    <a href="index.php?site=lostpassword">{{ lost_password }}</a>
-                                </div>
+          <button type="submit" class="btn btn-primary w-100">{{ login_button }}</button>
+        </form>
 
-                                <button type="submit" name="submit" class="btn btn-lg btn-primary btn-block text-uppercase font-weight-bold mb-2">
-                                    {{ login }}
-                                </button>
-
-                                <div class="text-center d-flex justify-content-between mt-4">
-                                    <p>
-                                        {{ forgotten_your_login }}<br><br>
-                                        {{ info_login }}
-                                    </p>
-                                </div>
-                            </form>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="mt-3 text-center">
+          <a href="index.php?site=register">{{ register_link }}</a> | 
+          <a href="index.php?site=lostpassword">{{ lostpassword_link }}</a>
         </div>
+      </div>
     </div>
+  </div>
 </div>
+
 <!-- END -->
 
-<!-- login_cookie_error-->
-    <div class="container">
-        <div class="alert alert-danger text-center" role="alert">
-            <h4>{{ cookie_title }}</h4>
-            <p>{{ cookie_text }}</p>
-            <a href="index.php?site=register" class="btn btn-primary">{{ register_now }}</a>
-        </div>
+<!-- login_error -->
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card shadow-lg p-4">
+        <h2 class="text-center mb-4">{{ login_headline }}</h2>
+
+        {{ error_message }}
+
+      </div>
     </div>
-<!-- END -->
+  </div>
+</div>
 
+<!-- END -->
 
