--- a/includes/themes/default/templates/login.html
+++ b/includes/themes/default/templates/login.html
@@ -9,13 +9,13 @@
 
         <form method="post" action="">
           <div class="mb-3">
-            <label for="email" class="form-label">{{ username_label }}</label>
-            <input type="email" class="form-control" id="email" name="email" required>
+            <label for="email" class="form-label">{{ email_label }}</label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="{{ your_email }}"required>
         </div>
 
           <div class="mb-3">
-            <label for="password" class="form-label">{{ password_label }}</label>
-            <input type="password" class="form-control" id="password" name="password" required>
+            <label for="password" class="form-label">{{ pass_label }}</label>
+            <input type="password" class="form-control" id="password" name="password" placeholder="{{ your_pass }}"required>
           </div>
 
           <div class="mb-3 form-check">
