--- a/includes/themes/default/templates/lostpassword.html
+++ b/includes/themes/default/templates/lostpassword.html
@@ -28,6 +28,17 @@
 </div>
 
 <!-- END -->
-
+<!-- lostpassword_success -->
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card shadow-lg p-4">
+        <h2 class="text-center mb-4">{{ forgotten_your_password }}</h2>
+{{ message }}
+<p>{{ return_to_login }}</p>
+</div>
+    </div>
+  </div>
+</div>
 <!-- END -->
 
