--- a/includes/themes/default/templates/login.html
+++ b/includes/themes/default/templates/login.html
@@ -25,7 +25,7 @@
 
               <div class="mb-3">
                 <label for="password" class="form-label">{{ pass_label }}</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="{{ your_pass }}" required>
+                <input type="password" class="form-control" id="password" name="password_hash" placeholder="{{ your_pass }}" required>
               </div>
 
               <div class="mb-3 form-check">
