--- a/components/css/page.css
+++ b/components/css/page.css
@@ -5,7 +5,7 @@
 ====================================*/
 
 .container{ 
-  max-width:1280px;  /* eventuell ändern */
+  /*max-width:1280px;  /* eventuell ändern */
   width:100%; 
 }
 
