--- a/includes/plugins/navigation/css/navigation.css
+++ b/includes/plugins/navigation/css/navigation.css
@@ -58,6 +58,8 @@
 
 .navbar li {
   position: relative;
+  border-right: 0px solid rgba(85, 85, 85, 0.125) !important;
+  border-left: 1px solid rgba(85, 85, 85, 0.125) !important;
 }
 
 .navbar a,
@@ -65,7 +67,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 25px 6px 25px 6px;
+  padding: 28px 16px 28px 16px;
   font-family: "Poppins", sans-serif;
   font-size: var(--bs-nav-font-size);
   color: rgba(var(--bs-rm-nav-link-color-rgb),1);
