--- a/includes/themes/default/templates/lostpassword.html
+++ b/includes/themes/default/templates/lostpassword.html
@@ -19,8 +19,8 @@
         </form>
 
         <div class="mt-3 text-center">
-          <a href="index.php">{{ return_to }}</a> | 
-          <a href="login.php">{{ login }}</a>
+          <a href="#">{{ return_to }}</a> | 
+          <a href="index.php?site=login">{{ login }}</a>
         </div>
       </div>
     </div>
