--- a/admin/css/metisMenu.css
+++ b/admin/css/metisMenu.css
@@ -30,10 +30,11 @@
   position: relative;
   display: block;
   color: #ffffff;
-  border-radius: 4px;
+  border-radius: 0px;
   padding: 12px;
   transition: all 0.3s ease-out;
   text-decoration: none;
+  background: rgba(255,255,255,0.2);
 }
 
 .sidebar-nav .metismenu a:hover,
@@ -46,8 +47,9 @@
 
 .sidebar-nav .metismenu .mm-active > a {
   color: #f4f4f4;
-  background: rgba(254,130,29,1);
-  border-radius: 4px;
+  background: rgba(255,255,255,0.2);
+  border-radius: 0px;
+  border-left: 4px solid rgba(254,130,29,1);
 }
 
 
@@ -147,9 +149,16 @@
   background: linear-gradient(0deg, rgba(44,53,61,1) 0%, rgba(58,70,81,1) 100%);
 }
 
-.sidebar-head .link-head {
+/*.sidebar-head .*/
+.link-head {
     color: #ffffff;
+    border-left: 0px solid rgba(255,255,255,0.2);
       background-color: transparent;
+      font-size: 20px;
+    /*border-left: 4px solid rgba(255,255,255,0.2);
+      background-color: transparent;
+      border-radius: 0px;
+      border: 1px solid rgba(254,130,29,1);*/
       }
 
 .sidebar-head {
@@ -162,7 +171,7 @@
 
 .sidebar ul li a {
     color: #ffffff;
-    border-radius: 4px;
+    border-radius: 0px;
     padding: 12px;
 }
 .sidebar ul li i {
@@ -181,13 +190,16 @@
 
 .sidebar ul li a.active, .sidebar ul li .mm-active {
     color: #f4f4f4;
-    background: rgba(254,130,29,1);
-    border-radius: 4px;
+    background: rgba(255,255,255,0.07);
+    border-radius: 0px;
+  border-left: 12px solid rgba(254,130,29,1);
 }
 
 .sidebar ul li a:focus, .btn.btn-primary.focus {
       color: #ffffff;
-      background-color: #fe821d;
+      background: rgba(255,255,255,0.2);
+    border-radius: 0px;
+  border-left: 4px solid rgba(254,130,29,1);
 }
 
 .sidebar .nav-second-level li,
@@ -195,7 +207,7 @@
    /*background: rgba(255,255,255,0.2);*/
    background: rgba(255,255,255,0.07);
    color: #f4f4f4 !important; 
-   border-radius: 4px;
+   border-radius: 0px;
 }
 
 .sidebar .nav-third-level li a {
