--- a/admin/css/page.css
+++ b/admin/css/page.css
@@ -982,13 +982,13 @@ blockquote {
 }
 
 .nav-link-2 {
-    margin-top: 18px;
-    color: #3a4651 !important;
- font-size: 12px;
+    margin-top: 15px;
+    color: #fff !important;
+ font-size: 16px;
 }
 
 .nav-link-3 {
-    margin-top: 18px;
-    color: #3a4651 !important;
- font-size: 12px;
+    margin-top: 15px;
+    color: #fff !important;
+ font-size: 16px;
 }
